--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "@rails/webpacker": "4.0.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "from": "^0.1.7",
     "webpack-dev-server": "^3.11.2"
   }
 }
